# US-stock-analyzer

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  api_server.py  app.py  charts.py  data_fetcher.py  display.py  docker-compose.yml  fundamental_fetcher.py  indicators.py  input_validator.py  main.py  model.py  pyproject.toml  rate_limiter.py  requirements.txt  security.py  strict_validator.py  visualization.py
.cursor/plans/: hybrid_live_feed_+_error_catching_2c32b23a.plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: stockApi.ts
frontend/src/components/: XPButton.tsx  XPCard.tsx  XPInput.tsx  XPLoading.tsx  XPPanel.tsx  XPProgress.tsx  XPTabs.tsx  index.ts
frontend/src/pages/: Screener.tsx
scripts/: pre-push-check.sh
templates/: index.html
tests/: __init__.py  test_data_fetcher.py  test_indicators.py  test_input_validator.py  test_model.py  test_rate_limiter.py  test_security.py  test_strict_validator.py
